--- a/app/src/main/res/layout/fragment_site.xml
+++ b/app/src/main/res/layout/fragment_site.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content" />
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/site_listView_container"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
